tests/lean/3989_2.lean.expected.out
3989_2.lean:6:0: error: expected else-alternative for `match_expr`, i.e., `| _ => ...`
3989_2.lean:1:22-1:32: error: Function expected at
  MetaM
but this term has type
  ?m

Note: Expected a function because this term is being applied to the argument
  Expr
Nat : Type
